--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Aldoo
+first_name: Aldo
 middle_name: A.
 last_name: Arellano
 email: aaarellano2 at wisc.edu
