--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,9 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2"
+          ruby-version: "3.2.0"
           bundler-cache: true
+          run: bundle update rexml
       - name: Update _config.yml ⚙️
         uses: fjogeleit/yaml-update-action@main
         with:
