--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,12 +67,15 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+      - name: Install Dependencies
+        run: bundle install
+      - name: Update REXML
+        run: bundle update rexml
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2.0"
           bundler-cache: true
-          run: bundle update rexml
       - name: Update _config.yml ⚙️
         uses: fjogeleit/yaml-update-action@main
         with:
