--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,10 +67,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
-      - name: Install Bundler
-        run: gem install bundler
       - name: Install Dependencies
-        run: bundle install
+        run:  install bundle
       - name: Update REXML
         run: bundle update rexml
       - name: Setup Ruby
