--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,9 +68,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
       - name: Install Dependencies
-        run:  install bundle
-      - name: Update REXML
-        run: bundle update rexml
+        run:  install bundle update rexml
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
